<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AddCategoryActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/llbottom1"
        android:layout_alignParentTop="true"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_add_name_image"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:src="@drawable/ic_user"
                android:layout_marginTop="@dimen/_10sdp"
                app:civ_border_color="@color/white"
                app:civ_border_width="2dp"
                app:civ_circle_background_color="@color/white" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_add_name_english"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/practo_regular"
                android:hint="@string/name_in_english"
                app:hintEnabled="true"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_add_name_english"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/practo_regular"
                    android:importantForAutofill="no"
                    android:inputType="textCapSentences|textNoSuggestions"
                    android:maxLength="30"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_add_name_hindi"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/practo_regular"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:hint="@string/name_in_hindi"
                app:hintEnabled="true"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_add_name_hindi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/practo_regular"
                    android:importantForAutofill="no"
                    android:inputType="textCapSentences|textNoSuggestions"
                    android:maxLength="50"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_add_category"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_6sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:fontFamily="@font/practo_regular"
                android:hint="@string/category"
                app:hintEnabled="true"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_add_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/practo_regular"
                    android:importantForAutofill="no"
                    android:clickable="true"
                    android:focusable="false"
                    android:inputType="textCapCharacters|textNoSuggestions"
                    android:maxLength="50"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_add_sub_category"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_6sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:fontFamily="@font/practo_regular"
                android:hint="@string/sub_category"
                app:hintEnabled="true"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_add_sub_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/practo_regular"
                    android:importantForAutofill="no"
                    android:clickable="true"
                    android:focusable="false"
                    android:inputType="textCapCharacters|textNoSuggestions"
                    android:maxLength="50"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_add_description"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_80sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_6sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:fontFamily="@font/practo_regular"
                android:hint="@string/description"
                app:hintEnabled="true"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_add_description"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/practo_regular"
                    android:importantForAutofill="no"
                    android:inputType="textCapSentences|textNoSuggestions"
                    android:maxLength="50"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/chk_add_featured"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:fontFamily="@font/practo_regular"
                android:text="@string/featured"
                android:textAlignment="textStart"
                android:layout_marginStart="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/llbottom1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_vehicles_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:fontFamily="@font/practo_regular"
            android:padding="@dimen/_12sdp"
            android:text="@string/add"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            app:cornerRadius="@dimen/_20sdp"
            app:rippleColor="@color/white" />
    </LinearLayout>

</RelativeLayout>